--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,9 @@
         "cmath": "cpp",
         "unordered_map": "cpp",
         "map": "cpp"
-    }
+    },
+    "python.analysis.extraPaths": [
+        "./src",
+        "./modules"   
+    ]
 }
